--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <p>Simple to integrate and easy to use</p>
 
-<p>Helium by Weglot/p>
+<p>Helium by Weglot</p>
 
 <p>Make your life easy when dealing with database</p>
 
