--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <nav class="navbar">
     <ol>
         <li><a href="bikes">Page 1</a></li>
-        <li><a href="bikes/bmx">Page 2</a></li>
+        <li><a href="https://etiennedh.github.io/page_test/page2.html">Page 2</a></li>
     </ol>
 </nav>
 
