--- a/page2.html
+++ b/page2.html
@@ -11,13 +11,13 @@
     </ol>
 </nav>
 
-<h1> Hello this is a sample page</h1>
+<h1> Hello this is a sample page 2</h1>
 
-<p>Simple to integrate and easy to use</p>
+<p>French open source framework</p>
 
-<p>Helium by Weglot</p>
+<p>Contact us</p>
 
-<p>Make your life easy when dealing with database</p>
+<p>French open source framework developed by Sensio Labs</p>
 
 </body>
 
