--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
 <body>
 <nav class="navbar">
     <ol>
-        <li><a href="#">Page 1</a></li>
+        <li><a href="https://etiennedh.github.io/page_test/index.html">Page 1</a></li>
         <li><a href="https://etiennedh.github.io/page_test/page2.html">Page 2</a></li>
     </ol>
 </nav>
