--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <nav class="navbar">
     <ol>
-        <li><a href="bikes">Page 1</a></li>
+        <li><a href="https://etiennedh.github.io/page_test/index.html">Page 1</a></li>
         <li><a href="https://etiennedh.github.io/page_test/page2.html">Page 2</a></li>
     </ol>
 </nav>
