--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
 <title>Test PAGE</title>
+ 
+<script type="text/javascript" src="https://cdn-staging.weglot.com/weglot.min.js"></script>
+<script>
+    Weglot.initialize({
+        api_key: 'wg_0a602f6c527345a4ab3d370f3efe935f1'
+    });
+</script>
+ 
 </head>
 
 <body>
