--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <p>Helium by Weglot</p>
 
 <p>Make your life easy when dealing with database</p>
+ 
+ <h1>Log In</h1>
+  	<a href="http://dashboard.weglot.localhost/app_dev.php/login" target="_blank">Log In</a>
 
 </body>
 
